samples/_failures_safe/1761073840_9e2322_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f25b5a00.c: In function ‘main’:
./samples/SAFE/__tmp_f25b5a00.c:200:13: error: expected ‘;’ at end of input
  200 |     return 0
      |             ^
      |             ;
./samples/SAFE/__tmp_f25b5a00.c:200:5: error: expected declaration or statement at end of input
  200 |     return 0
      |     ^~~~~~
